--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,13 @@
   --custom-black: #2b2c30;
   --custom-dark: #212529;
 }
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300&display=swap");
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 body {
   background-color: var(--custom-dark);
