text sizes changed

--- a/src/style.css
+++ b/src/style.css
@@ -4008,6 +4008,10 @@ video {
     align-items: stretch;
   }
 
+  .lg\:p-7 {
+    padding: 1.75rem;
+  }
+
   .lg\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -4033,6 +4037,10 @@ video {
 
   .xl\:p-20 {
     padding: 5rem;
+  }
+
+  .xl\:p-10 {
+    padding: 2.5rem;
   }
 
   .xl\:text-4xl {
