--- a/src/style.css
+++ b/src/style.css
@@ -2028,8 +2028,56 @@ video {
   background-color: rgb(33 37 41 / var(--tw-bg-opacity));
 }
 
+.bg-customBlack\/20 {
+  background-color: rgb(43 44 48 / 0.2);
+}
+
+.bg-customBlack\/60 {
+  background-color: rgb(43 44 48 / 0.6);
+}
+
+.bg-customBlack\/80 {
+  background-color: rgb(43 44 48 / 0.8);
+}
+
+.bg-customBlack\/90 {
+  background-color: rgb(43 44 48 / 0.9);
+}
+
+.bg-\[url\(\'img\/testimonial-ng\.png\'\)\] {
+  background-image: url('img/testimonial-ng.png');
+}
+
+.bg-\[url\(\'\.\/img\/testimonial-ng\.png\'\)\] {
+  background-image: url('./img/testimonial-ng.png');
+}
+
+.bg-\[url\(\'\.\/img\/testimonial-bg\.png\'\)\] {
+  background-image: url('./img/testimonial-bg.png');
+}
+
+.bg-\[url\(\'\.\/img\/testimonials-bg\.png\'\)\] {
+  background-image: url('./img/testimonials-bg.png');
+}
+
+.bg-\[url\(\'\.\/img\/testimonials\/testimonials-bg\.png\'\)\] {
+  background-image: url('./img/testimonials/testimonials-bg.png');
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-fixed {
+  background-attachment: fixed;
+}
+
 .bg-clip-padding {
   background-clip: padding-box;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 
 .fill-\[\#afafaf\] {
@@ -2335,6 +2383,11 @@ video {
 
 .text-xl {
   font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
@@ -4153,6 +4206,10 @@ video {
 
   .xl\:w-9\/12 {
     width: 75%;
+  }
+
+  .xl\:w-10\/12 {
+    width: 83.333333%;
   }
 
   .xl\:flex-row {
