--- a/src/style.css
+++ b/src/style.css
@@ -1220,6 +1220,10 @@ video {
   width: 2.5rem;
 }
 
+.w-10\/12 {
+  width: 83.333333%;
+}
+
 .w-16 {
   width: 4rem;
 }
@@ -1254,6 +1258,10 @@ video {
 
 .w-9 {
   width: 2.25rem;
+}
+
+.w-9\/12 {
+  width: 75%;
 }
 
 .w-\[1\.125rem\] {
@@ -1327,14 +1335,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-8\/12 {
-  width: 66.666667%;
-}
-
-.w-9\/12 {
-  width: 75%;
 }
 
 .min-w-0 {
@@ -1724,10 +1724,6 @@ video {
   border-radius: 0.25rem;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
 .rounded-3xl {
   border-radius: 1.5rem;
 }
@@ -1865,10 +1861,6 @@ video {
   border-right-width: 0px;
 }
 
-.border-t-2 {
-  border-top-width: 2px;
-}
-
 .\!border-solid {
   border-style: solid !important;
 }
@@ -1889,11 +1881,6 @@ video {
 .border-\[\#3b71ca\] {
   --tw-border-opacity: 1;
   border-color: rgb(59 113 202 / var(--tw-border-opacity));
-}
-
-.border-beeYellow {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 238 92 / var(--tw-border-opacity));
 }
 
 .border-black {
@@ -2029,8 +2016,8 @@ video {
   background-color: rgb(43 44 48 / var(--tw-bg-opacity));
 }
 
-.bg-customBlack\/70 {
-  background-color: rgb(43 44 48 / 0.7);
+.bg-customBlack\/80 {
+  background-color: rgb(43 44 48 / 0.8);
 }
 
 .bg-customBlack\/90 {
@@ -2081,10 +2068,6 @@ video {
 .bg-zinc-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
-}
-
-.bg-customBlack\/80 {
-  background-color: rgb(43 44 48 / 0.8);
 }
 
 .bg-\[url\(\'\.\/img\/testimonials\/testimonials-bg\.png\'\)\] {
@@ -2237,6 +2220,11 @@ video {
   padding-bottom: 0.375rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .py-14 {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
@@ -2282,14 +2270,9 @@ video {
   padding-bottom: 5px;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .pb-0 {
@@ -3162,10 +3145,6 @@ video {
   display: none;
 }
 
-.hover\:w-full:hover {
-  width: 100%;
-}
-
 .hover\:cursor-pointer:hover {
   cursor: pointer;
 }
@@ -3287,11 +3266,6 @@ video {
   --tw-shadow: 0px 0px 0px 13px rgba(0,0,0,0.6);
   --tw-shadow-colored: 0px 0px 0px 13px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.after\:hover\:w-full:hover::after {
-  content: var(--tw-content);
-  width: 100%;
 }
 
 .hover\:after\:w-full:hover::after {
@@ -4216,12 +4190,16 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:h-72 {
-    height: 18rem;
+  .md\:w-9\/12 {
+    width: 75%;
   }
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:w-8\/12 {
+    width: 66.666667%;
   }
 
   .md\:grid-cols-2 {
@@ -4262,24 +4240,24 @@ video {
     margin-right: 0.5rem;
   }
 
-  .lg\:h-96 {
-    height: 24rem;
-  }
-
   .lg\:h-80 {
     height: 20rem;
-  }
-
-  .lg\:w-1\/2 {
-    width: 50%;
   }
 
   .lg\:w-2\/5 {
     width: 40%;
   }
 
-  .lg\:w-1\/5 {
-    width: 20%;
+  .lg\:w-7\/12 {
+    width: 58.333333%;
+  }
+
+  .lg\:w-6\/12 {
+    width: 50%;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
   }
 
   .lg\:flex-row {
@@ -4292,11 +4270,6 @@ video {
 
   .lg\:p-7 {
     padding: 1.75rem;
-  }
-
-  .lg\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
   }
 }
 
