--- a/src/style.css
+++ b/src/style.css
@@ -2303,6 +2303,14 @@ video {
   padding-top: 0.37rem;
 }
 
+.pb-14 {
+  padding-bottom: 3.5rem;
+}
+
+.pt-0 {
+  padding-top: 0px;
+}
+
 .text-left {
   text-align: left;
 }
