--- a/src/style.css
+++ b/src/style.css
@@ -656,6 +656,10 @@ video {
   left: -15px;
 }
 
+.-right-10 {
+  right: -2.5rem;
+}
+
 .-top-16 {
   top: -4rem;
 }
@@ -674,6 +678,10 @@ video {
 
 .bottom-1\/2 {
   bottom: 50%;
+}
+
+.bottom-4 {
+  bottom: 1rem;
 }
 
 .bottom-\[2px\] {
@@ -750,30 +758,6 @@ video {
 
 .top-\[13px\] {
   top: 13px;
-}
-
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.right-2 {
-  right: 0.5rem;
-}
-
-.bottom-4 {
-  bottom: 1rem;
-}
-
-.-right-3 {
-  right: -0.75rem;
-}
-
-.-right-10 {
-  right: -2.5rem;
 }
 
 .z-30 {
@@ -1242,10 +1226,6 @@ video {
 
 .w-10 {
   width: 2.5rem;
-}
-
-.w-10\/12 {
-  width: 83.333333%;
 }
 
 .w-16 {
@@ -1961,6 +1941,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-beeYellow {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 216 44 / var(--tw-border-opacity));
+}
+
 .border-t-transparent {
   border-top-color: transparent;
 }
@@ -2015,11 +2000,11 @@ video {
 
 .bg-beeYellow {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 238 92 / var(--tw-bg-opacity));
+  background-color: rgb(243 216 44 / var(--tw-bg-opacity));
 }
 
 .bg-beeYellow\/50 {
-  background-color: rgb(255 238 92 / 0.5);
+  background-color: rgb(243 216 44 / 0.5);
 }
 
 .bg-black {
@@ -2094,11 +2079,6 @@ video {
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
-.bg-danger {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 76 100 / var(--tw-bg-opacity));
-}
-
 .bg-\[url\(\'\.\/img\/testimonials\/testimonials-bg\.png\'\)\] {
   background-image: url('./img/testimonials/testimonials-bg.png');
 }
@@ -2167,6 +2147,10 @@ video {
 
 .p-\[auto\] {
   padding: auto;
+}
+
+.p-16 {
+  padding: 4rem;
 }
 
 .\!py-0 {
@@ -2269,6 +2253,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .py-\[0\.32rem\] {
   padding-top: 0.32rem;
   padding-bottom: 0.32rem;
@@ -2299,9 +2288,14 @@ video {
   padding-bottom: 5px;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .pb-0 {
@@ -2330,14 +2324,6 @@ video {
 
 .pt-\[0\.37rem\] {
   padding-top: 0.37rem;
-}
-
-.pb-14 {
-  padding-bottom: 3.5rem;
-}
-
-.pt-0 {
-  padding-top: 0px;
 }
 
 .text-left {
@@ -2613,7 +2599,7 @@ video {
 
 .text-beeYellow {
   --tw-text-opacity: 1;
-  color: rgb(255 238 92 / var(--tw-text-opacity));
+  color: rgb(243 216 44 / var(--tw-text-opacity));
 }
 
 .text-black {
@@ -2696,6 +2682,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-beeYellow\/60 {
+  color: rgb(243 216 44 / 0.6);
 }
 
 .underline {
@@ -2786,14 +2776,8 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-\[0_4px_9px_-4px_\#dc4c64\] {
-  --tw-shadow: 0 4px 9px -4px #dc4c64;
-  --tw-shadow-colored: 0 4px 9px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-beeYellow\/10 {
-  --tw-shadow-color: rgb(255 238 92 / 0.1);
+  --tw-shadow-color: rgb(243 216 44 / 0.1);
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -3077,7 +3061,7 @@ video {
 .after\:border-beeYellow::after {
   content: var(--tw-content);
   --tw-border-opacity: 1;
-  border-color: rgb(255 238 92 / var(--tw-border-opacity));
+  border-color: rgb(243 216 44 / var(--tw-border-opacity));
 }
 
 .after\:transition-all::after {
@@ -3206,7 +3190,7 @@ video {
 
 .hover\:border-beeYellow:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(255 238 92 / var(--tw-border-opacity));
+  border-color: rgb(243 216 44 / var(--tw-border-opacity));
 }
 
 .hover\:bg-\[\#00000014\]:hover {
@@ -3241,11 +3225,6 @@ video {
   background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-danger-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(212 42 70 / var(--tw-bg-opacity));
-}
-
 .hover\:fill-\[\#8b8b8b\]:hover {
   fill: #8b8b8b;
 }
@@ -3262,11 +3241,11 @@ video {
 
 .hover\:text-beeYellow:hover {
   --tw-text-opacity: 1;
-  color: rgb(255 238 92 / var(--tw-text-opacity));
+  color: rgb(243 216 44 / var(--tw-text-opacity));
 }
 
 .hover\:text-beeYellow\/95:hover {
-  color: rgb(255 238 92 / 0.95);
+  color: rgb(243 216 44 / 0.95);
 }
 
 .hover\:text-primary:hover {
@@ -3291,12 +3270,6 @@ video {
 .hover\:shadow-xl:hover {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0_8px_9px_-4px_rgba\(220\2c 76\2c 100\2c 0\.3\)\2c 0_4px_18px_0_rgba\(220\2c 76\2c 100\2c 0\.2\)\]:hover {
-  --tw-shadow: 0 8px 9px -4px rgba(220,76,100,0.3),0 4px 18px 0 rgba(220,76,100,0.2);
-  --tw-shadow-colored: 0 8px 9px -4px var(--tw-shadow-color), 0 4px 18px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -3333,7 +3306,7 @@ video {
 
 .focus\:border-beeYellow:focus {
   --tw-border-opacity: 1;
-  border-color: rgb(255 238 92 / var(--tw-border-opacity));
+  border-color: rgb(243 216 44 / var(--tw-border-opacity));
 }
 
 .focus\:border-primary:focus {
@@ -3357,11 +3330,6 @@ video {
 .focus\:bg-neutral-200:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(229 229 229 / var(--tw-bg-opacity));
-}
-
-.focus\:bg-danger-600:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(212 42 70 / var(--tw-bg-opacity));
 }
 
 .focus\:text-\[\#3b71ca\]:focus {
@@ -3395,21 +3363,9 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.focus\:shadow-\[0_8px_9px_-4px_rgba\(220\2c 76\2c 100\2c 0\.3\)\2c 0_4px_18px_0_rgba\(220\2c 76\2c 100\2c 0\.2\)\]:focus {
-  --tw-shadow: 0 8px 9px -4px rgba(220,76,100,0.3),0 4px 18px 0 rgba(220,76,100,0.2);
-  --tw-shadow-colored: 0 8px 9px -4px var(--tw-shadow-color), 0 4px 18px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.focus\:ring-0:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .focus\:transition-\[border-color_0\.2s\]:focus {
@@ -3572,23 +3528,12 @@ video {
 
 .active\:border-beeYellow:active {
   --tw-border-opacity: 1;
-  border-color: rgb(255 238 92 / var(--tw-border-opacity));
+  border-color: rgb(243 216 44 / var(--tw-border-opacity));
 }
 
 .active\:bg-\[\#cacfd1\]:active {
   --tw-bg-opacity: 1;
   background-color: rgb(202 207 209 / var(--tw-bg-opacity));
-}
-
-.active\:bg-danger-700:active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(176 35 58 / var(--tw-bg-opacity));
-}
-
-.active\:shadow-\[0_8px_9px_-4px_rgba\(220\2c 76\2c 100\2c 0\.3\)\2c 0_4px_18px_0_rgba\(220\2c 76\2c 100\2c 0\.2\)\]:active {
-  --tw-shadow: 0 8px 9px -4px rgba(220,76,100,0.3),0 4px 18px 0 rgba(220,76,100,0.2);
-  --tw-shadow-colored: 0 8px 9px -4px var(--tw-shadow-color), 0 4px 18px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .group\/x:hover .group-hover\/x\:h-\[11px\] {
@@ -4272,18 +4217,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:w-9\/12 {
-    width: 75%;
-  }
-
-  .md\:w-full {
-    width: 100%;
-  }
-
-  .md\:w-8\/12 {
-    width: 66.666667%;
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -4328,18 +4261,6 @@ video {
 
   .lg\:w-2\/5 {
     width: 40%;
-  }
-
-  .lg\:w-7\/12 {
-    width: 58.333333%;
-  }
-
-  .lg\:w-6\/12 {
-    width: 50%;
-  }
-
-  .lg\:w-1\/2 {
-    width: 50%;
   }
 
   .lg\:w-full {
@@ -4390,6 +4311,15 @@ video {
 
   .xl\:p-20 {
     padding: 5rem;
+  }
+
+  .xl\:p-16 {
+    padding: 4rem;
+  }
+
+  .xl\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 
   .xl\:text-4xl {
