--- a/src/css/personalStyles.css
+++ b/src/css/personalStyles.css
@@ -1,5 +1,5 @@
 :root {
-  --bee-yellow: #e9ab17;
+  --bee-yellow: #f3d82c;
   --bee-black: #000;
   --light-bee-yellow: #fde8bc;
   --custom-yellow: #ffee5c;
@@ -26,6 +26,10 @@ body {
 
 .nav {
   z-index: 1000;
+}
+.nav-link.active {
+  border-top: 1px solid var(--bee-yellow);
+  color: var(--bee-yellow);
 }
 .sideNav {
   z-index: 5000;
