about page complete and fatoub page complete

--- a/src/style.css
+++ b/src/style.css
@@ -4376,6 +4376,11 @@ video {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 
 @media (min-width: 1024px) {
