--- a/src/style.css
+++ b/src/style.css
@@ -764,6 +764,10 @@ video {
   z-index: 30;
 }
 
+.z-40 {
+  z-index: 40;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -792,10 +796,6 @@ video {
   z-index: 999;
 }
 
-.z-40 {
-  z-index: 40;
-}
-
 .float-right {
   float: right;
 }
@@ -819,6 +819,11 @@ video {
 .\!my-0 {
   margin-top: 0px !important;
   margin-bottom: 0px !important;
+}
+
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 
 .mx-2 {
@@ -871,9 +876,9 @@ video {
   margin-bottom: 5px;
 }
 
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .-mr-\[100\%\] {
@@ -964,6 +969,10 @@ video {
   margin-right: auto;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -978,18 +987,6 @@ video {
 
 .mt-\[0\.15rem\] {
   margin-top: 0.15rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
 }
 
 .box-border {
@@ -1172,6 +1169,10 @@ video {
   height: 4px;
 }
 
+.h-\[50vh\] {
+  height: 50vh;
+}
+
 .h-\[512px\] {
   height: 512px;
 }
@@ -1192,6 +1193,10 @@ video {
   height: 93vh;
 }
 
+.h-\[95vh\] {
+  height: 95vh;
+}
+
 .h-auto {
   height: auto;
 }
@@ -1209,16 +1214,20 @@ video {
   height: 100vh;
 }
 
-.h-\[50vh\] {
-  height: 50vh;
+.h-20 {
+  height: 5rem;
 }
 
-.h-\[75vh\] {
-  height: 75vh;
+.h-12 {
+  height: 3rem;
 }
 
-.h-\[45vh\] {
-  height: 45vh;
+.h-\[50px\] {
+  height: 50px;
+}
+
+.h-\[60px\] {
+  height: 60px;
 }
 
 .max-h-56 {
@@ -1259,6 +1268,10 @@ video {
 
 .w-10 {
   width: 2.5rem;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
 }
 
 .w-16 {
@@ -1374,12 +1387,20 @@ video {
   width: 100vw;
 }
 
-.w-8\/12 {
-  width: 66.666667%;
+.w-12 {
+  width: 3rem;
 }
 
-.w-11\/12 {
-  width: 91.666667%;
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-\[40px\] {
+  width: 40px;
+}
+
+.w-\[60px\] {
+  width: 60px;
 }
 
 .min-w-0 {
@@ -1424,6 +1445,18 @@ video {
 
 .max-w-full {
   max-width: 100%;
+}
+
+.max-w-xl {
+  max-width: 36rem;
+}
+
+.max-w-md {
+  max-width: 28rem;
+}
+
+.max-w-2xl {
+  max-width: 42rem;
 }
 
 .flex-1 {
@@ -1953,6 +1986,11 @@ video {
   border-color: rgb(249 250 251 / var(--tw-border-opacity));
 }
 
+.border-laundryPurple {
+  --tw-border-opacity: 1;
+  border-color: rgb(83 39 168 / var(--tw-border-opacity));
+}
+
 .border-neutral-100 {
   --tw-border-opacity: 1;
   border-color: rgb(245 245 245 / var(--tw-border-opacity));
@@ -2061,6 +2099,14 @@ video {
   background-color: rgb(0 0 0 / 0.4);
 }
 
+.bg-black\/80 {
+  background-color: rgb(0 0 0 / 0.8);
+}
+
+.bg-black\/90 {
+  background-color: rgb(0 0 0 / 0.9);
+}
+
 .bg-customBlack {
   --tw-bg-opacity: 1;
   background-color: rgb(43 44 48 / var(--tw-bg-opacity));
@@ -2120,32 +2166,28 @@ video {
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
-.bg-black\/50 {
-  background-color: rgb(0 0 0 / 0.5);
+.bg-laundryPurple {
+  --tw-bg-opacity: 1;
+  background-color: rgb(83 39 168 / var(--tw-bg-opacity));
 }
 
-.bg-black\/70 {
-  background-color: rgb(0 0 0 / 0.7);
-}
-
-.bg-black\/90 {
-  background-color: rgb(0 0 0 / 0.9);
-}
-
-.bg-black\/80 {
-  background-color: rgb(0 0 0 / 0.8);
-}
-
-.bg-black\/95 {
-  background-color: rgb(0 0 0 / 0.95);
-}
-
-.bg-black\/60 {
-  background-color: rgb(0 0 0 / 0.6);
+.bg-laundryLightPurple {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 140 232 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\.\/img\/testimonials\/testimonials-bg\.png\'\)\] {
   background-image: url('./img/testimonials/testimonials-bg.png');
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-laundryPurple {
+  --tw-gradient-from: #5327A8 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(83 39 168 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .bg-cover {
@@ -2177,28 +2219,22 @@ video {
      object-fit: cover;
 }
 
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
-}
-
 .object-scale-down {
   -o-object-fit: scale-down;
      object-fit: scale-down;
 }
 
-.object-top {
-  -o-object-position: top;
-     object-position: top;
-}
-
-.object-right-top {
-  -o-object-position: right top;
-     object-position: right top;
+.object-right {
+  -o-object-position: right;
+     object-position: right;
 }
 
 .p-0 {
   padding: 0px;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-2 {
@@ -2221,24 +2257,16 @@ video {
   padding: 1.25rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
 .p-\[5px\] {
   padding: 5px;
 }
 
 .p-\[auto\] {
   padding: auto;
-}
-
-.p-10 {
-  padding: 2.5rem;
-}
-
-.p-16 {
-  padding: 4rem;
-}
-
-.p-8 {
-  padding: 2rem;
 }
 
 .\!py-0 {
@@ -2254,11 +2282,6 @@ video {
 .px-0\.5 {
   padding-left: 0.125rem;
   padding-right: 0.125rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
 }
 
 .px-2 {
@@ -2279,6 +2302,11 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .px-6 {
@@ -2379,16 +2407,6 @@ video {
 .py-\[5px\] {
   padding-top: 5px;
   padding-bottom: 5px;
-}
-
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
 }
 
 .py-7 {
@@ -2767,6 +2785,16 @@ video {
   color: inherit;
 }
 
+.text-laundryLightPurple {
+  --tw-text-opacity: 1;
+  color: rgb(187 140 232 / var(--tw-text-opacity));
+}
+
+.text-laundryPurple {
+  --tw-text-opacity: 1;
+  color: rgb(83 39 168 / var(--tw-text-opacity));
+}
+
 .text-neutral-500 {
   --tw-text-opacity: 1;
   color: rgb(115 115 115 / var(--tw-text-opacity));
@@ -2876,12 +2904,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-beeYellow\/10 {
   --tw-shadow-color: rgb(243 216 44 / 0.1);
   --tw-shadow: var(--tw-shadow-colored);
@@ -2894,11 +2916,6 @@ video {
 
 .shadow-customDark {
   --tw-shadow-color: #212529;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-customBlack {
-  --tw-shadow-color: #2b2c30;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -3334,6 +3351,11 @@ video {
 .hover\:bg-customDark:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(33 37 41 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-laundryPurple:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(83 39 168 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-neutral-200:hover {
@@ -4361,6 +4383,11 @@ video {
     padding-bottom: 0.75rem;
   }
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -4379,11 +4406,6 @@ video {
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 }
 
@@ -4447,10 +4469,6 @@ video {
     width: 75%;
   }
 
-  .xl\:flex-1 {
-    flex: 1 1 0%;
-  }
-
   .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -4459,34 +4477,27 @@ video {
     flex-direction: row;
   }
 
-  .xl\:flex-col {
-    flex-direction: column;
-  }
-
-  .xl\:items-stretch {
-    align-items: stretch;
-  }
-
   .xl\:p-10 {
     padding: 2.5rem;
-  }
-
-  .xl\:p-16 {
-    padding: 4rem;
   }
 
   .xl\:p-20 {
     padding: 5rem;
   }
 
-  .xl\:px-16 {
-    padding-left: 4rem;
-    padding-right: 4rem;
+  .xl\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
 
   .xl\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .xl\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 
   .xl\:text-7xl {
